<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jfernandomosquera.myapplication.ParkFragment">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/parfqueadero"
        android:adjustViewBounds="false"
        android:longClickable="false"
        android:scaleType="fitStart"
        android:layout_weight="0"
        android:foregroundTintMode="src_atop"
        android:layout_gravity="center"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_gravity="top"
       android:layout_weight="1"
       android:layout_margin="@dimen/cast_libraries_material_featurehighlight_center_horizontal_offset"
       android:paddingLeft="@dimen/cast_libraries_material_featurehighlight_center_threshold">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/info"
        android:id="@+id/textView"
        android:layout_weight="1" />

    <TextView
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:text="@string/dias"
        android:id="@+id/textView2"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horas"
        android:id="@+id/textView3"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tarifahora"
        android:id="@+id/textView4"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carro"
        android:id="@+id/textView5"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horas"
        android:id="@+id/textView6"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tarifadia"
        android:id="@+id/textView7"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carrod"
        android:id="@+id/textView8"
        android:layout_weight="1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motod"
        android:id="@+id/textView9"
        android:layout_weight="1" />

   </LinearLayout>

    <ImageButton
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton2"
        android:layout_gravity="right"
        android:layout_weight="0.29"
        android:background="@drawable/ok"
        android:onClick="inicio"/>
</LinearLayout>
